[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "drand-verify"
version = "0.2.0"
description = "Verify drand beacons and derive their randomness."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License"
]
keywords = ["drand", "cryptography"]

[project.urls]
Homepage = "https://github.com/very-lame-username/python-drand-verify"

[tool.maturin]
features = ["pyo3/extension-module"]
